crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_task_card_idle.snap
---
source: crates/whip-tui/src/widgets/tests.rs
assertion_line: 140
expression: buffer_to_string(&buf)
---
┌────────────────────┐
│Idle Task           │
│Waiting to be sta...│
└────────────────────┘
