crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_task_card_selected.snap
---
source: crates/whip-tui/src/widgets/tests.rs
assertion_line: 205
expression: buffer_to_string(&buf)
---
┌────────────────────┐
│Selected Task       │
│This task is sele...│
└────────────────────┘
