crates/tui/src/widgets/snapshots/whip_tui__widgets__tests__snapshot_task_card_success.snap
---
source: crates/whip-tui/src/widgets/tests.rs
assertion_line: 179
expression: buffer_to_string(&buf)
---
┌────────────────────┐
│Completed Task      │
│Successfully fini...│
└────────────────────┘
